# switchboard-plug-parental-controls

./: .travis.yml  AUTHORS  CMakeLists.txt  README.md  meson.build  meson_options.txt
.github/workflows/: main.yml
data/: CMakeLists.txt  daemon.conf  io.elementary.desktop.agent-parental-controls.desktop.in  io.elementary.switchboard.parental-controls.appdata.xml.in  meson.build  org.pantheon.ParentalControls.conf  org.pantheon.ParentalControls.service  org.pantheon.ParentalControls.service.cmake  org.pantheon.ParentalControls.service.in  org.pantheon.switchboard.parental-controls.policy.cmake  org.pantheon.switchboard.parental-controls.policy.in  pantheon-parental-controls-client.desktop  pantheon-parental-controls-client.desktop.in  pantheon-parental-controls-daemon.desktop  pantheon-parental-controls-daemon.desktop.cmake  pantheon-parental-controls-daemon.service.cmake  pantheon-parental-controls.service.cmake  pantheon-parental-controls.service.in  parental-control.desktop  parental-controls-daemon.sh  policy.in  screentime-limits.metainfo.xml.in  screentime-limits.policy.in  screentime-limits.policy.in.in
debian/: changelog  control  copyright  install  io.elementary.settings.screentime-limits.links  pantheon-parental-controls.service  rules
lib/: exec-monitor.c  exec-monitor.h
po/: POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  el.po  en_AU.po  en_CA.po  en_GB.po  (+146 more)
po/extra/: POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  el.po  (+159 more)
src/: CMakeLists.txt  PAMControl.vala  Plug.vala  Translation.vala  meson.build
src/Widgets/: AppChooser.vala  AppsBox.vala  ControlPage.vala  EmbeddedAlert.vala  GeneralBox.vala  InternetBox.vala  SettingFrame.vala  UserItem.vala  UserList.vala  WeekSpinBox.vala
src/agent/: Agent.vala  AppUnavailableDialog.vala  meson.build
src/cli/: Application.vala  CMakeLists.txt  FileReader.vala  PAMReader.vala  PAMWriter.vala  main.vala
src/client/: AppLockDialog.vala  AppUnavailableDialog.vala  CMakeLists.txt  Client.vala  meson.build
src/common/: Constants.vala.in  Utils.vala  meson.build
src/common/PAM/: Token.vala  Writer.vala
src/daemon/: AccessControlLists.vala  AppLockCore.vala  AppLockDialog.vala  CMakeLists.txt  Core.vala  Daemon.vala  Interfaces.vala  IptablesHelper.vala  Process.vala  ProcessWatcher.vala  Restriction.vala  RestrictionController.vala  Server.vala  SessionHandler.vala  SessionManager.vala  Timer.vala  UserConfig.vala  UserConfiguration.vala  exec-monitor.c  main.vala  meson.build
src/daemon/Restrictions/: AppRestriction.vala  Restriction.vala  TimeRestriction.vala  WebRestriction.vala
src/plug/: CMakeLists.txt  MainView.vala  Plug.vala  meson.build
src/plug/Views/: AppsView.vala  InternetView.vala  TimeLimitView.vala
src/plug/Widgets/: AppChooser.vala  AppRow.vala  AppsBox.vala  ControlPage.vala  GeneralBox.vala  InternetBox.vala  UserItem.vala  UserList.vala  WeekSpinBox.vala
src/shared/: Constants.vala.cmake  PAMControl.vala  Utils.vala  Vars.vala
src/shared/PAM/: Reader.vala  Token.vala  Writer.vala
vapi/: Malcontent-0.metadata  accountsservice.vapi  exec-monitor.vapi  malcontent-0.vapi
